recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: not found: value level
	if (level ==0) {avance(length)} 
            ^